--- a/Chromi/Base.lproj/Main.storyboard
+++ b/Chromi/Base.lproj/Main.storyboard
@@ -270,7 +270,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="jvT-wf-vf0">
-                                <rect key="frame" x="12.666666666666657" y="20" width="350" height="100"/>
+                                <rect key="frame" x="12.666666666666657" y="20" width="350" height="101"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LLK-4e-b1l">
                                         <rect key="frame" x="0.0" y="0.0" width="350" height="50"/>
@@ -278,12 +278,37 @@
                                             <constraint firstAttribute="height" constant="50" id="VDt-1C-wiF"/>
                                         </constraints>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hOC-ms-gAC">
-                                        <rect key="frame" x="0.0" y="50" width="350" height="50"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rkh-5J-Ou9" userLabel="Divider">
+                                        <rect key="frame" x="0.0" y="50" width="350" height="1"/>
+                                        <color key="backgroundColor" systemColor="secondarySystemFillColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="qL1-O3-zO6"/>
+                                            <constraint firstAttribute="height" constant="1" id="Thw-En-1el"/>
                                         </constraints>
-                                    </stackView>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oLj-ji-LtB">
+                                        <rect key="frame" x="0.0" y="51" width="350" height="50"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Color" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JCC-Qv-92N">
+                                                <rect key="frame" x="20" y="14.999999999999998" width="41" height="20.333333333333329"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#FFFFFF" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wdC-NS-97l" customClass="SRCopyableLabel" customModule="Chromi" customModuleProvider="target">
+                                                <rect key="frame" x="263.66666666666663" y="14.999999999999998" width="66.333333333333314" height="20.333333333333329"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="wdC-NS-97l" firstAttribute="centerY" secondItem="oLj-ji-LtB" secondAttribute="centerY" id="OoP-gA-Ori"/>
+                                            <constraint firstItem="JCC-Qv-92N" firstAttribute="leading" secondItem="oLj-ji-LtB" secondAttribute="leading" constant="20" id="VIz-qY-7jz"/>
+                                            <constraint firstItem="JCC-Qv-92N" firstAttribute="centerY" secondItem="oLj-ji-LtB" secondAttribute="centerY" id="WlX-Md-nOU"/>
+                                            <constraint firstAttribute="height" constant="50" id="i1t-eF-ipX"/>
+                                            <constraint firstAttribute="trailing" secondItem="wdC-NS-97l" secondAttribute="trailing" constant="20" id="tRE-Ih-7X4"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                 <constraints>
@@ -314,6 +339,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="colorBarContainerView" destination="LLK-4e-b1l" id="iT2-bM-Evv"/>
+                        <outlet property="inputColorLabel" destination="wdC-NS-97l" id="snL-uq-9td"/>
                         <outlet property="inputColorStack" destination="jvT-wf-vf0" id="wgA-oX-a1v"/>
                     </connections>
                 </viewController>
@@ -447,7 +473,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="tzS-om-u4c"/>
+        <segue reference="fcB-Se-Gnd"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="gear" catalog="system" width="128" height="122"/>
@@ -462,6 +488,9 @@
         </systemColor>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="secondarySystemFillColor">
+            <color red="0.47058823529411764" green="0.47058823529411764" blue="0.50196078431372548" alpha="0.16" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
