--- a/Chromi/Base.lproj/Main.storyboard
+++ b/Chromi/Base.lproj/Main.storyboard
@@ -315,7 +315,7 @@
                                     <constraint firstAttribute="width" constant="350" id="Wxr-He-9Yl"/>
                                 </constraints>
                             </stackView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Dof-in-hkG">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="insetGrouped" separatorStyle="singleLineEtched" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Dof-in-hkG">
                                 <rect key="frame" x="0.0" y="121" width="375" height="200"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
@@ -323,19 +323,44 @@
                                 </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="colorCell" id="Qad-g1-USm" customClass="ColorCell" customModule="Chromi" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="55.333332061767578" width="335" height="43.666667938232422"/>
+                                        <rect key="frame" x="20" y="55.333332061767578" width="335" height="44.333332061767578"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Qad-g1-USm" id="9JK-a6-f6V">
-                                            <rect key="frame" x="0.0" y="0.0" width="335" height="43.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="335" height="44.333332061767578"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wLx-xx-MN7">
-                                                    <rect key="frame" x="47" y="11" width="240" height="22"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wLx-xx-MN7">
+                                                    <rect key="frame" x="7" y="6.9999999999999982" width="55" height="30.333333333333329"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NbL-gu-c2K" customClass="SRCopyableLabel" customModule="Chromi" customModuleProvider="target">
+                                                            <rect key="frame" x="10" y="5" width="45" height="20.333333333333332"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="55" id="Bp4-d3-nQ6"/>
+                                                        <constraint firstAttribute="height" constant="30" id="F3j-X4-uzz"/>
+                                                        <constraint firstAttribute="trailing" secondItem="NbL-gu-c2K" secondAttribute="trailing" id="G7h-NP-ZO4"/>
+                                                        <constraint firstItem="NbL-gu-c2K" firstAttribute="leading" secondItem="wLx-xx-MN7" secondAttribute="leading" constant="10" id="QrY-Y4-RAp"/>
+                                                        <constraint firstItem="NbL-gu-c2K" firstAttribute="centerY" secondItem="wLx-xx-MN7" secondAttribute="centerY" id="mO4-vJ-CnS"/>
+                                                    </constraints>
                                                 </view>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="wLx-xx-MN7" firstAttribute="top" secondItem="9JK-a6-f6V" secondAttribute="top" constant="7" id="ggO-Lc-OOf"/>
+                                                <constraint firstAttribute="bottom" secondItem="wLx-xx-MN7" secondAttribute="bottom" constant="7" id="mo4-S1-AGr"/>
+                                                <constraint firstItem="wLx-xx-MN7" firstAttribute="leading" secondItem="9JK-a6-f6V" secondAttribute="leading" constant="7" id="wZM-jg-Po3"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="cellView" destination="9JK-a6-f6V" id="dlb-rP-euM"/>
+                                            <outlet property="colorLabel" destination="NbL-gu-c2K" id="oos-AZ-L48"/>
+                                            <outlet property="textBackdropView" destination="wLx-xx-MN7" id="CoE-C2-XfC"/>
+                                            <outlet property="textBackdropWidth" destination="Bp4-d3-nQ6" id="ePy-3w-p8i"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
