--- a/Chromi/Base.lproj/Main.storyboard
+++ b/Chromi/Base.lproj/Main.storyboard
@@ -323,17 +323,17 @@
                                 </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="colorCell" id="Qad-g1-USm" customClass="ColorCell" customModule="Chromi" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="55.333332061767578" width="335" height="44.333332061767578"/>
+                                        <rect key="frame" x="20" y="55.333332061767578" width="335" height="43.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Qad-g1-USm" id="9JK-a6-f6V">
-                                            <rect key="frame" x="0.0" y="0.0" width="335" height="44.333332061767578"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="335" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wLx-xx-MN7">
-                                                    <rect key="frame" x="7" y="6.9999999999999982" width="55" height="30.333333333333329"/>
+                                                    <rect key="frame" x="7" y="7" width="200" height="30"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NbL-gu-c2K" customClass="SRCopyableLabel" customModule="Chromi" customModuleProvider="target">
-                                                            <rect key="frame" x="10" y="5" width="45" height="20.333333333333332"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NbL-gu-c2K" customClass="SRCopyableLabel" customModule="Chromi" customModuleProvider="target">
+                                                            <rect key="frame" x="10" y="5" width="41.333333333333336" height="20.333333333333332"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -341,17 +341,15 @@
                                                     </subviews>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="55" id="Bp4-d3-nQ6"/>
-                                                        <constraint firstAttribute="height" constant="30" id="F3j-X4-uzz"/>
-                                                        <constraint firstAttribute="trailing" secondItem="NbL-gu-c2K" secondAttribute="trailing" id="G7h-NP-ZO4"/>
                                                         <constraint firstItem="NbL-gu-c2K" firstAttribute="leading" secondItem="wLx-xx-MN7" secondAttribute="leading" constant="10" id="QrY-Y4-RAp"/>
                                                         <constraint firstItem="NbL-gu-c2K" firstAttribute="centerY" secondItem="wLx-xx-MN7" secondAttribute="centerY" id="mO4-vJ-CnS"/>
+                                                        <constraint firstAttribute="width" constant="200" id="pK9-84-G8V"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="wLx-xx-MN7" secondAttribute="bottom" constant="7" id="fLN-8F-DX4"/>
                                                 <constraint firstItem="wLx-xx-MN7" firstAttribute="top" secondItem="9JK-a6-f6V" secondAttribute="top" constant="7" id="ggO-Lc-OOf"/>
-                                                <constraint firstAttribute="bottom" secondItem="wLx-xx-MN7" secondAttribute="bottom" constant="7" id="mo4-S1-AGr"/>
                                                 <constraint firstItem="wLx-xx-MN7" firstAttribute="leading" secondItem="9JK-a6-f6V" secondAttribute="leading" constant="7" id="wZM-jg-Po3"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -359,7 +357,7 @@
                                             <outlet property="cellView" destination="9JK-a6-f6V" id="dlb-rP-euM"/>
                                             <outlet property="colorLabel" destination="NbL-gu-c2K" id="oos-AZ-L48"/>
                                             <outlet property="textBackdropView" destination="wLx-xx-MN7" id="CoE-C2-XfC"/>
-                                            <outlet property="textBackdropWidth" destination="Bp4-d3-nQ6" id="ePy-3w-p8i"/>
+                                            <outlet property="textBackdropWidth" destination="pK9-84-G8V" id="02w-qS-hca"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -526,7 +524,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="fcB-Se-Gnd"/>
+        <segue reference="tzS-om-u4c"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="gear" catalog="system" width="128" height="122"/>
