--- a/Chromi/Base.lproj/Main.storyboard
+++ b/Chromi/Base.lproj/Main.storyboard
@@ -315,25 +315,25 @@
                                     <constraint firstAttribute="width" constant="350" id="Wxr-He-9Yl"/>
                                 </constraints>
                             </stackView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="insetGrouped" separatorStyle="singleLineEtched" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Dof-in-hkG">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="insetGrouped" separatorStyle="singleLineEtched" rowHeight="49" estimatedRowHeight="-1" sectionHeaderHeight="10" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Dof-in-hkG">
                                 <rect key="frame" x="0.0" y="121" width="375" height="200"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="NE4-g3-SvB"/>
                                 </constraints>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="colorCell" id="Qad-g1-USm" customClass="ColorCell" customModule="Chromi" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="55.333332061767578" width="335" height="43.666667938232422"/>
+                                    <tableViewCell autoresizesSubviews="NO" clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" shouldIndentWhileEditing="NO" reuseIdentifier="colorCell" id="Qad-g1-USm" customClass="ColorCell" customModule="Chromi" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="55.333332061767578" width="335" height="49"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Qad-g1-USm" id="9JK-a6-f6V">
-                                            <rect key="frame" x="0.0" y="0.0" width="335" height="43.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="335" height="49"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wLx-xx-MN7">
-                                                    <rect key="frame" x="7" y="7" width="200" height="30"/>
+                                                    <rect key="frame" x="10" y="7" width="200" height="35"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NbL-gu-c2K" customClass="SRCopyableLabel" customModule="Chromi" customModuleProvider="target">
-                                                            <rect key="frame" x="10" y="5" width="41.333333333333336" height="20.333333333333332"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NbL-gu-c2K" customClass="SRCopyableLabel" customModule="Chromi" customModuleProvider="target">
+                                                            <rect key="frame" x="10" y="7" width="138" height="20"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -343,21 +343,22 @@
                                                     <constraints>
                                                         <constraint firstItem="NbL-gu-c2K" firstAttribute="leading" secondItem="wLx-xx-MN7" secondAttribute="leading" constant="10" id="QrY-Y4-RAp"/>
                                                         <constraint firstItem="NbL-gu-c2K" firstAttribute="centerY" secondItem="wLx-xx-MN7" secondAttribute="centerY" id="mO4-vJ-CnS"/>
-                                                        <constraint firstAttribute="width" constant="200" id="pK9-84-G8V"/>
+                                                        <constraint firstAttribute="height" constant="35" id="scu-rn-c6I"/>
+                                                        <constraint firstAttribute="width" constant="200" id="vkb-QL-eSB"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="wLx-xx-MN7" secondAttribute="bottom" constant="7" id="fLN-8F-DX4"/>
-                                                <constraint firstItem="wLx-xx-MN7" firstAttribute="top" secondItem="9JK-a6-f6V" secondAttribute="top" constant="7" id="ggO-Lc-OOf"/>
-                                                <constraint firstItem="wLx-xx-MN7" firstAttribute="leading" secondItem="9JK-a6-f6V" secondAttribute="leading" constant="7" id="wZM-jg-Po3"/>
+                                                <constraint firstAttribute="bottom" secondItem="wLx-xx-MN7" secondAttribute="bottom" constant="7" id="A24-Im-eD4"/>
+                                                <constraint firstItem="wLx-xx-MN7" firstAttribute="leading" secondItem="9JK-a6-f6V" secondAttribute="leading" constant="10" id="g6k-AF-RqX"/>
+                                                <constraint firstItem="wLx-xx-MN7" firstAttribute="top" secondItem="9JK-a6-f6V" secondAttribute="top" constant="7" id="ojV-Vb-81c"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="cellView" destination="9JK-a6-f6V" id="dlb-rP-euM"/>
                                             <outlet property="colorLabel" destination="NbL-gu-c2K" id="oos-AZ-L48"/>
                                             <outlet property="textBackdropView" destination="wLx-xx-MN7" id="CoE-C2-XfC"/>
-                                            <outlet property="textBackdropWidth" destination="pK9-84-G8V" id="02w-qS-hca"/>
+                                            <outlet property="textBackdropWidth" destination="vkb-QL-eSB" id="7SI-do-Stu"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -391,7 +392,7 @@
                         <outlet property="colorBarContainerView" destination="LLK-4e-b1l" id="iT2-bM-Evv"/>
                         <outlet property="inputColorLabel" destination="wdC-NS-97l" id="snL-uq-9td"/>
                         <outlet property="inputColorStack" destination="jvT-wf-vf0" id="wgA-oX-a1v"/>
-                        <outlet property="tableViewTest" destination="Dof-in-hkG" id="r49-y7-y7r"/>
+                        <outlet property="schemeTable" destination="Dof-in-hkG" id="QeN-UZ-ll2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tTb-Wx-CaZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -407,7 +408,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" largeTitles="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sQE-h2-nFE">
-                                <rect key="frame" x="-4" y="0.0" width="376" height="44"/>
+                                <rect key="frame" x="-4" y="0.0" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Settings" largeTitleDisplayMode="always" id="no7-HI-gWY"/>
@@ -524,7 +525,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="tzS-om-u4c"/>
+        <segue reference="fcB-Se-Gnd"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="gear" catalog="system" width="128" height="122"/>
